--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,8 @@
 {
-  "name": "@tts-ui/core",
+  "name": "@kaundal/core",
+"publishConfig": {
+  "access": "public"
+},
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
