--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,20 @@
 {
     "compilerOptions": {
-      "target": "es5",
       "lib": ["dom", "dom.iterable", "esnext"],
       "allowJs": true,
       "skipLibCheck": true,
-      "esModuleInterop": true,
       "allowSyntheticDefaultImports": true,
       "strict": true,
       "forceConsistentCasingInFileNames": true,
       "noFallthroughCasesInSwitch": true,
-      "module": "esnext",
       "moduleResolution": "node",
       "resolveJsonModule": true,
       "isolatedModules": true,
-      "noEmit": true,
-      "jsx": "react-jsx"
+      "noEmit": false,
+      "esModuleInterop": true,
+      "module": "CommonJS",
+      "target": "ESNext",
+      "jsx": "react"
     },
     "include": ["packages/**/*"]
   }
-  
